--- a/app/templates/settings/labs.hbs
+++ b/app/templates/settings/labs.hbs
@@ -179,6 +179,54 @@
                     </div>
                     </GhUploader>
                 </div>
+                <div class="gh-expandable-block">
+                    <GhUploader
+                        @extensions={{this.yamlExtension}}
+                        @uploadUrl="/settings/headers/yaml/"
+                        @paramName="headers"
+                        @onUploadSuccess={{perform this.headersUploadResult true}}
+                        @onUploadFailure={{perform this.headersUploadResult false}}
+                        as |uploader|
+                    >
+                        <div class="gh-expandable-header">
+                            <div>
+                                <h4 class="gh-expandable-title">Headers</h4>
+                                <p class="gh-expandable-description">Configure headers by modifying the headers.yaml file</p>
+                            </div>
+                            <div class="gh-setting-action flex flex-column items-end">
+                                {{#if uploader.isUploading}}
+                                    {{uploader.progressBar}}
+                                {{else}}
+                                    <button
+                                        type="button"
+                                        class="gh-btn gh-btn-icon {{if this.headersSuccess "gh-btn-green"}} {{if this.headersFailure "gh-btn-red"}}"
+                                        onclick={{action "triggerFileDialog"}}
+                                        data-test-button="upload-headers"
+                                    >
+                                        <span>
+                                            {{#if this.headersSuccess}}
+                                                {{svg-jar "check-circle"}} Uploaded
+                                            {{else if this.routesFailure}}
+                                                {{svg-jar "retry"}} Upload Failed
+                                            {{else}}
+                                                Upload headers YAML
+                                            {{/if}}
+                                        </span>
+                                    </button>
+                                    <div><a href="#" {{action "downloadFile" "settings/headers/yaml/"}} data-test-link="download-headers">Download current headers.yaml</a></div>
+                                {{/if}}
+
+                                {{#each uploader.errors as |error|}}
+                                    <div class="gh-setting-error" data-test-error="headers">{{or error.context error.message}}</div>
+                                {{/each}}
+
+                                <div style="display:none">
+                                    <GhFileInput @multiple={{false}} @action={{uploader.setFiles}} @accept={{this.yamlAccept}} data-test-file-input="headers" />
+                                </div>
+                            </div>
+                        </div>
+                    </GhUploader>
+                    </div>
 
                 {{#if (enable-developer-experiments)}}
                     <div class="gh-expandable-block">
@@ -234,54 +282,6 @@
                                 </div>
                             {{/if}}
                         </div>
-                    </div>
-                    <div class="gh-expandable-block">
-                        <GhUploader
-                            @extensions={{this.yamlExtension}}
-                            @uploadUrl="/settings/headers/yaml/"
-                            @paramName="headers"
-                            @onUploadSuccess={{perform this.headersUploadResult true}}
-                            @onUploadFailure={{perform this.headersUploadResult false}}
-                            as |uploader|
-                        >
-                        <div class="gh-expandable-header">
-                            <div>
-                                <h4 class="gh-expandable-title">Headers</h4>
-                                <p class="gh-expandable-description">Configure headers by modifying the headers.yaml file</p>
-                            </div>
-                            <div class="gh-setting-action flex flex-column items-end">
-                                {{#if uploader.isUploading}}
-                                    {{uploader.progressBar}}
-                                {{else}}
-                                    <button
-                                        type="button"
-                                        class="gh-btn gh-btn-icon {{if this.headersSuccess "gh-btn-green"}} {{if this.headersFailure "gh-btn-red"}}"
-                                        onclick={{action "triggerFileDialog"}}
-                                        data-test-button="upload-headers"
-                                    >
-                                        <span>
-                                            {{#if this.headersSuccess}}
-                                                {{svg-jar "check-circle"}} Uploaded
-                                            {{else if this.routesFailure}}
-                                                {{svg-jar "retry"}} Upload Failed
-                                            {{else}}
-                                                Upload headers YAML
-                                            {{/if}}
-                                        </span>
-                                    </button>
-                                    <div><a href="#" {{action "downloadFile" "settings/headers/yaml"}} data-test-link="download-headers">Download current headers.yaml</a></div>
-                                {{/if}}
-
-                                {{#each uploader.errors as |error|}}
-                                    <div class="gh-setting-error" data-test-error="headers">{{or error.context error.message}}</div>
-                                {{/each}}
-
-                                <div style="display:none">
-                                    <GhFileInput @multiple={{false}} @action={{uploader.setFiles}} @accept={{this.yamlAccept}} data-test-file-input="headers" />
-                                </div>
-                            </div>
-                        </div>
-                        </GhUploader>
                     </div>
                 {{/if}}
             </div>
